# gragica

./: .env  .env.production.template  .gitignore  CLAUDE.md  docker-compose.yml  fecth_backend.sh  fecth_web.sh  generate_empty_nginx_logs.sh  generate_selfsigned_cert.sh  test-endpoints.sh
back/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  create_database.py  database.sql  fake_data.py
back/email_templates/: assessment_created.html  footer.html  grade_submitted.html  message_sent.html  subject_message_sent.html
back/src/: cron.rs  email.rs  filters.rs  json.rs  jwt.rs  main.rs  parse_multipart.rs  routes.rs  structs.rs  traits.rs
back/src/impls/: mod.rs  user_delete.rs  user_get.rs  user_new.rs  user_post.rs  user_update.rs
back/src/views/: assessmets.rs  assistance.rs  courses.rs  disciplinary_sanctions.rs  get_if_answered.rs  grades.rs  health.rs  login.rs  logout.rs  messages.rs  mod.rs  personal_data.rs  profile_pictures.rs  register.rs  role.rs  roles.rs  selfassessables.rs  selfassessables_pending_grades.rs  students.rs  subject_messages.rs  subjects.rs  submissions.rs  timetables.rs  verify_token.rs
fail2ban/: jail.local
fail2ban/filter.d/: nginx-rejected-methods.conf  nginx-req-limit.conf
front/: Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json
front/scripts/: update-protected-routes.js
front/src/app/: globals.css  layout.tsx  (+1 more)
init/: Dockerfile  create_database.py
mysql/: init.sql  migrate_chat_tables.sql
nginx/: mime.types  nginx.conf
nginx/conf.d/: default.conf  default.conf.production
(+89 files in other folders)
