[package]
name = "goschool"
version = "2.0.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]

actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.7"
actix-web = "4"
anyhow = "1"
bcrypt = "0.17"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
futures = "0.3"
futures-util = "0.3"
jsonwebtoken = "9.3"
log = "0.4"
mime = "0.3"
rust_decimal = "1.37"
sanitize-filename = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["rust_decimal", "mysql", "runtime-tokio", "chrono", "runtime-tokio-native-tls"] }
tempfile = "3.19"
thiserror = "2.0"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
cron = "0.15.0"
infer = "0.19"
rand="0.9"
lettre = { version = "0.11", features = ["builder", "tokio1-native-tls"] }
tera = "1"
chrono-tz = "0.10"
ammonia="4"
